--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "heroku": "^7.59.0",
     "knex": "^0.95.11",
     "mysql": "^2.18.1",
     "uuid": "^8.3.2"
